线上问题排查内容提交

--- a/tools/问题排查工具箱.md
+++ b/tools/问题排查工具箱.md
@@ -10,9 +10,36 @@
 
 ### jstat 查询jvm当前的状态，常用查看gc状况
 
+支持的选项主要针对：类装装载 垃圾收集 运行期编译状况
+
+
+
 jstat -gcutil pid 1000
 
 Jstat -gc pid 1000
+
+支持的选项包括：
+
+https://docs.oracle.com/javase/8/docs/technotes/tools/unix/jstat.html#BEHBBBDJ
+
+命令
+
+```
+1	class	显示有关类加载器行为的统计信息
+2	compiler	显示有关 Java HotSpot 虚拟机即时编译器行为的统计信息
+3	gc	显示垃圾收集堆行为的统计信息
+4	gccapacity	显示各代容量及其相应空间的统计信息
+5	gccause	显示垃圾收集统计信息（与 -gcutil 相同）的摘要，以及上次和当前（如果适用）垃圾收集事件的原因
+6	gcnew	显示新一代行为的统计数据
+7	gcnewcapacity	显示关于新一代大小及其相应空间的统计信息
+8	gcold	显示老一代行为的统计信息和元空间统计信息
+9	gcoldcapacity	显示关于老一代大小的统计数据
+10	gcmetacapacity	显示关于元空间大小的统计信息
+11	gcutil	显示垃圾收集统计信息的摘要
+12	printcompilation	显示 Java HotSpot 虚拟机编译方法统计信息
+```
+
+
 
 ### jmap 常用语jvm内存分析（dump文件）
 
